<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/PersonalProfileOthers"
    tools:context=".PersonalProfileOthers"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="325dp">
        <LinearLayout
...
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/AddFriend"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Add Friend"
                        android:textSize="20dp"
                        android:backgroundTint="@color/black"/>

                </LinearLayout>
                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent">
                    <Button
                        android:id="@+id/Block"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Block"
                        android:textSize="20dp"
                        android:backgroundTint="@color/black"/>

...
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_email_24"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/Email"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="Email"/>
        </LinearLayout>
...
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_numbers_24"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/Age"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="Age"/>
        </LinearLayout>
...
            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/baseline_monitor_weight_24"/>
            <TextView
                android:textStyle="bold"
                android:id="@+id/Weight"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="Username"/>
        </LinearLayout>
...
                android:paddingLeft="20dp"
                android:text="Gender"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/navigation_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:gravity="bottom"
        >
...
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#3A3A3A"
            app:icon="@drawable/home" />

        <Button
            android:id="@+id/navigation_friends"
            android:contentDescription="Friends"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_home"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/friends" />

        <Button
            android:id="@+id/navigation_schedule"
            android:contentDescription="Schedule"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_friends"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/baseline_calendar_month_24" />

...
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_schedule"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/gym"
            />
        <Button
            android:id="@+id/navigation_profile"
            android:contentDescription="Profile"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/navigation_gyms"
            android:backgroundTint="#FF3A3A3A"
            app:icon="@drawable/user"
            />
...
