<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/PossibleFriends"
    tools:context=".PossibleFriends">

    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/my_friends"
            android:layout_centerInParent="true"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@id/top_bar_messages"
            android:backgroundTint="#FF3A3A3A"
            android:text="My Friends" />

        <Button
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:id="@+id/top_bar_messages"
            android:contentDescription="Messages"
...
