<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Unblock"
    tools:context=".Unblock"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
...
                android:gravity="center"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent">
                <Button
                    android:id="@+id/Confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirm"
                    android:textSize="20dp"
                    android:backgroundTint="@color/black"/>

...
